# TextureSynth

./: .gitignore  AGENTS.md  CH_FORMAT_ENUMS.md  CMakeLists.txt  CMakeSettings.json  INTERMEDIATE_OVERRIDE_DEBUG_FINDINGS.md  MUTE_FIX_PLAN.md  blend_chain_dump.glsl  blur_debug_sp0.glsl  bugs.txt  build_clean.bat  build_fast.bat  debug_mute_middle.py  debug_pyd.py  deploy.ps1  diag_engine.txt  fused_perlin_invert.glsl  fusion_group_dump.txt  info.txt  mcp_query.py  node_architecture_reference.json  pytest.ini  research_single_chain.glsl  run_tests.bat  setup.py  test_detail.xml  test_results.xml
.circleci/: config.yml
.github/workflows/: build_texturesynth.yml
.opencode/: preload-skills.json
.opencode/plans/: graph-fusion-activation.md
.opencode/skills/beauty-coder/: SKILL.md
.opencode/skills/blender-addon/: SKILL.md  deploy.sh
.opencode/skills/blender-mcp/: SKILL.md
.opencode/skills/blender-mcp/references/: nodes_and_api.md
.opencode/skills/blender-mcp/scripts/: _resolver.py  bake_targets.py  build_graph.py  debug_fusion.py  explore_current_scene.py  introspect.py  mcp_fetch.py  (+3 more)
.opencode/skills/code-simplifier/: SKILL.md
.opencode/skills/dox-enforce/: SKILL.md
.opencode/skills/explain-expert/: SKILL.md
.opencode/skills/glsl/: SKILL.md
.opencode/skills/stuck-problem-patterns/: SKILL.md
.opencode/skills/systematic-debugging/: SKILL.md
.opencode/skills/vulkan/: SKILL.md
ADDON/: AGENTS.md  __init__.py  blender_manifest.toml  python_copy.bat
ADDON/core/: __init__.py  cpp_module.py  engine_bridge.py  evaluation.py  logging.py  preferences.py
ADDON/nodes/: __init__.py  base.py  categories.py  factory.py  tree.py
ADDON/nodes/specialized/: __init__.py  _common.py  blend.py  blend.py.bak  color_const.py  image.py  levels.py  output.py  repeat.py
ADDON/operators/: __init__.py  bake.py  connect.py  output_targets.py  update.py
ADDON/panels/: __init__.py  sidebar.py
ADDON/utils/: __init__.py  dll_loader.py  node_utils.py  rna.py
ADDON/wheels/: .gitkeep
Mesh/: Rounded_Cylinder.fbx
cmake/: Dependencies.cmake
scripts/: capture_renderdoc.bat  dump_blender_graph.py  run_tests.bat  run_with_validation.bat
shader_assets/: AGENTS.md  Houdini_Generated.c  gather_glsl.bat  gather_json.bat
shader_assets/glsl/: blend_common.glsl  blend_common.glsl.bak  color_common.glsl  math_common.glsl  noise_common.glsl  remap.glsl  sampling_common.glsl
shader_assets/nodes/: README.md  blend.glsl  blend.glsl.bak  blend.node.json  blend.node.json.bak  blur.glsl  blur.node.json  color_const.glsl  color_const.node.json  combine_rgba.glsl  combine_rgba.node.json  format_nodes.bat  format_nodes.py  gabor.glsl  gabor.node.json  grayscale.glsl  grayscale.node.json  height_to_normal.node.json  image.glsl  image.node.json  invert.glsl  invert.node.json  levels.glsl  levels.node.json  perlin.glsl  perlin.node.json  remap.glsl  remap.node.json  separate_rgba.glsl  separate_rgba.node.json  shuffle.glsl  shuffle.node.json  simplex.glsl  simplex.node.json  split_rgba.glsl  split_rgba.node.json  value.glsl  value.node.json  warp.glsl  warp.node.json  (+4 more)
src/: AGENTS.md  cpp_copy.bat
src/bindings/: bindings.cpp
src/engine/: AGENTS.md  AsyncReadback.cpp  AsyncReadback.hpp  BindlessTable.cpp  BindlessTable.hpp  ChainFinder.cpp  ChainFinder.hpp  ChainShaderEmitter.cpp  ChainShaderEmitter.hpp  ComputePipeline.cpp  ComputePipeline.hpp  DirtySet.hpp  Engine.cpp  Engine.hpp  EngineBarriers.cpp  EngineBarriers.hpp  EngineDispatch.cpp  EngineError.hpp  EngineGroupCompile.cpp  EngineParams.cpp  EnginePassCompile.cpp  Graph.hpp  GraphCompiler.cpp  GraphCompiler.hpp  GraphIR.cpp  GraphIR.hpp  Image.cpp  Image.hpp  ImageUploader.cpp  ImageUploader.hpp  Logging.hpp  NodeLibrary.cpp  NodeLibrary.hpp  NodeRegistryLoader.cpp  NodeRegistryLoader.hpp  NodeResource.hpp  PassPlan.hpp  PushConstants.hpp  ResourceManager.cpp  ResourceManager.hpp  (+9 more)
src/engine/graphfusion/: AGENTS.md  ActivePathTracer.cpp  ActivePathTracer.hpp  DAG.hpp  FusedGraphCompiler.cpp  FusedGraphCompiler.hpp  FusedGraphEmitter.cpp  FusedGraphEmitter.hpp  FusedGroupCompiler.hpp  FusionGroup.hpp  FusionGroupEmitter.hpp  FusionPlanner.hpp  GlslBuilder.hpp  RegisterAllocator.hpp
src/engine/memory_allocation/: AGENTS.md  AliasColorer.cpp  AliasColorer.hpp
src/engine/register_allocation/: AGENTS.md  GraphColorer.cpp  GraphColorer.hpp  InterferenceGraph.cpp  InterferenceGraph.hpp  LivenessAnalysis.cpp  LivenessAnalysis.hpp
src/viewer/: ImGuiLayer.cpp  ImGuiLayer.hpp  RenderDocCapture.cpp  RenderDocCapture.hpp  Renderer.cpp  Renderer.hpp  Swapchain.cpp  Swapchain.hpp  Window.cpp  Window.hpp  main.cpp
test_shader_cache/: 56a10ddcbcf17d76.spv  eb332eda21c66800.spv
tests/: .gitignore  AGENTS.md  CMakeLists.txt  inspect_perlin_invert.cpp  main.cpp  test_active_node_stability.cpp  test_active_path_tracer.cpp  test_aliasing.cpp  test_assets.hpp  test_assets_impl.hpp  test_async_readback.cpp  test_blend002_corruption.cpp  test_blend_cross_chain.cpp  test_blend_dual_input.cpp  test_blend_mode_param.cpp  test_blend_node.cpp  test_blend_py_repro.cpp  test_blend_ssbodump.cpp  test_blender_graph_dump.cpp  test_blur_debug.cpp  test_chain_finding.cpp  test_chain_shader_emitter.cpp  test_channel_defaults.cpp  test_color_const.cpp  test_combine_rgba.cpp  test_context.cpp  test_dead_node_impact.cpp  test_dead_node_impact2.cpp  test_depth_resolution.cpp  test_diagnostic_blur.cpp  test_dirty_set.cpp  test_dump_gabor_blend.cpp  test_format_depth_keys.cpp  test_full_pipeline.cpp  test_fused_blend_glsl.cpp  test_fused_graph_activation.cpp  test_fused_graph_compiler.cpp  test_fused_graph_emitter.cpp  test_fused_real_nodes.cpp  test_fused_variant_key.cpp  (+19 more)
tests/python/: __init__.py  conftest.py  test_addon_preview_root.py  test_bake.py  test_blend_debug.py  test_blend_diag2.py  test_blend_swap.py  test_claim_verification.py  test_fused_wiring_key.py  test_graph.py  test_images.py  test_lifecycle.py  test_node_library.py  test_params.py  test_render.py
tools/: blender_node_inspector.py  debug_blender_mute.py  test_new_bindings.py  validate_nodes.py
